--- a/qhack-frontend/.gitignore
+++ b/qhack-frontend/.gitignore
@@ -1,11 +1,16 @@
+# System files
 .DS_Store
+
+# Node modules
 node_modules
+
+# Build output
 /dist
 
-
-# local env files
+# Local environment files
 .env.local
 .env.*.local
+.env
 
 # Log files
 npm-debug.log*
@@ -13,7 +18,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Editor directories and files
+# Editor-specific settings
 .idea
 .vscode
 *.suo
