--- a/qhack-frontend/package.json
+++ b/qhack-frontend/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@coreui/coreui": "^5.2.0",
+    "@coreui/vue": "^5.4.1",
+    "bootstrap": "^5.3.5",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "4"
